Documenting endpoints with Swagger
